Config pdf theme

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "vuepress": "^1.0.0-alpha.47"
   },
   "scripts": {
+    "serve": "vuepress dev docs",
+    "serve:pdf":"export PDF_MODE=1;vuepress dev docs",
     "docs:dev": "vuepress dev docs",
     "prebuild": "rm -rf node_modules && yarn install",
     "docs:build": "yarn prebuild && vuepress build docs && yarn postbuild",
