--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@vuepress/plugin-blog": "^1.0.0-alpha.0",
+    "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
     "vuepress": "^1.0.0-alpha.47"
   },
   "scripts": {
