--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve:pdf": "export PDF_MODE=1;vuepress dev docs",
     "docs:dev": "vuepress dev docs",
     "prebuild": "rm -rf node_modules && yarn install",
-    "docs:build": "yarn prebuild && vuepress build docs && yarn postbuild",
+    "docs:build": "vuepress build docs && yarn postbuild",
     "postbuild": "./deploy.sh"
   }
 }
